--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@ a:visited {
     }
 }
 
-
+@font-face { font-family: 'minecraft pixel perfect'; src: url('font/minecraft-unicode.otf'); }
+@font-face { font-family: 'minecraft pixel perfect'; src: url('font/Minecraft-Bold.ttf'); font-weight: bold; }
 
 .author-face {
     float: right;
@@ -84,9 +85,7 @@ a:visited {
     height: 360px;
     /* content/indicator are positioned absolutely */
     position: relative;
-    font-family: 'MC', 'MC-Fallback', sans-serif;
-    font-size: 20px;
-    line-height: 0.9em;
+    font: 20px / 0.9em 'minecraft pixel perfect', serif;
     color: black;
     margin: 0.5em 0;
 }
@@ -183,59 +182,3 @@ footer,
 .fmt7 { color: #bebebe; }
 .fmt8 { color: #3f3f3f; }
 .fmt0 { color: #000000; }
-
-#featured-books {
-    margin-top: 40px;
-}
-
-.book-list {
-    list-style: none;
-    padding-left: 0;
-}
-
-.book-list li {
-    margin: 8px 0;
-}
-
-.book-list a {
-    color: #3c78d8;
-    font-size: 18px;
-    text-decoration: none;
-}
-
-.book-list a:hover {
-    text-decoration: underline;
-}
-
-/* ================================
-   MINECRAFT FONT SYSTEM (WORKING)
-   ================================ */
-
-/* Main Minecraft regular font */
-@font-face {
-    font-family: 'MC';
-    src: url('font/Minecraft-Regular.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-/* Bold version */
-@font-face {
-    font-family: 'MC';
-    src: url('font/Minecraft-Bold.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
-}
-
-/* Unicode fallback (for emojis + non-latin chars) */
-@font-face {
-    font-family: 'MC-Fallback';
-    src: url('font/minecraft-unicode.otf') format('opentype');
-    unicode-range: U+0000-10FFFF; /* universal */
-}
-
-/* Default font stack */
-html, body {
-    font-family: 'MC', 'MC-Fallback', sans-serif;
-}
-
