--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 body {
     margin: 0;
     padding: 16px;
-    font: 16px / 1.5 sans-serif;
+    font: 16px / 1.5 minecraft-pixel-perfect;
 }
 
 body > header,
